hphp/hack/test/typecheck/inout/bad_inout_use_lvalue3.php.exp
File "bad_inout_use_lvalue3.php", line 10, characters 5-30:
You cannot decorate this argument as inout (Parsing[1002])
File "bad_inout_use_lvalue3.php", line 10, characters 11-31:
Arguments for inout parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
