hphp/hack/test/typecheck/inout/bad_inout_use_lvalue3.php
<?hh // strict

class Cls {
  const Some_CLASS_CONST = 3.14159;
}

function f(inout float $i): void {}

function test(): void {
  f(inout Cls::Some_CLASS_CONST);
}
